# prisma-engines-test

./: .editorconfig  .envrc  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  flake.nix  rust-toolchain.toml  shell.nix
.github/workflows/: on-push-to-main.yml  test-driver-adapters-template.yml  test-query-engine.yml
.github_skip/workflows/: build-engines-apple-intel-template.yml  build-engines-apple-silicon-template.yml  build-engines-windows-template.yml  build-prisma-schema-wasm.yml  on-push-to-main.yml  test-compilation.yml  test-quaint.yml  test-schema-engine.yml
.github_skip/workflows/utils/: constructDockerBuildCommand.sh
apps/cli/: Cargo.toml
apps/cli/prisma/: schema.prisma  setting.prisma
apps/cli/prisma/migrations/20241103193258_wip/: migration.sql
apps/cli/prisma/migrations/20241103215519_wip/: migration.sql
apps/cli/prisma/migrations/20241105001221_wip/: migration.sql
apps/cli/prisma/migrations/20241105001344_wip/: migration.sql
apps/cli/prisma/migrations/20241105172435_wip/: migration.sql
apps/cli/prisma/migrations/20241105181641_wip/: migration.sql
apps/cli/prisma/migrations/20241105182329_wip/: migration.sql
apps/cli/prisma/migrations/20241105183118_wip/: migration.sql
apps/cli/prisma/migrations/20241105210704_wip/: migration.sql
apps/cli/prisma/migrations/20241110064501_wip/: migration.sql
apps/cli/prisma/migrations/20241110230400_wip/: migration.sql
apps/cli/prisma/migrations/20250126175020_wip/: migration.sql
apps/cli/prisma/migrations/20250217001833_/: migration.sql
apps/cli/prisma/migrations/20250217002301_/: migration.sql
apps/cli/prisma/migrations/20250217034926_/: migration.sql
apps/cli/prisma/migrations/20250217040146_/: migration.sql
apps/cli/prisma/migrations/20250217040536_/: migration.sql
apps/cli/prisma/migrations/20250217040938_/: migration.sql
apps/cli/prisma/migrations/20250218014300_/: migration.sql
apps/cli/prisma/migrations/20250220234947_/: migration.sql
apps/cli/prisma/migrations/20250222222104_/: migration.sql
apps/cli/prisma/migrations/20250222222258_/: migration.sql
apps/cli/prisma/migrations/20250224235652_/: migration.sql
apps/cli/prisma/migrations/20250821050332_/: migration.sql
apps/cli/src/: logger.rs  main.rs  path.rs  url.rs  util.rs
apps/cli/src/command/: debug.rs  format.rs  migrate.rs  mod.rs
apps/fmt/src/: code_actions.rs  hover.rs  references.rs  text_document_completion.rs
apps/lsp/: Cargo.toml
libs/build-utils/: Cargo.toml
libs/build-utils/src/: lib.rs
libs/crosstarget-utils/: Cargo.toml
libs/driver-adapters/: Cargo.toml
libs/query-engine-common/: Cargo.toml
libs/query-engine-common/src/: engine.rs
libs/sql-ddl/: Cargo.toml
libs/sql-ddl/src/: lib.rs
libs/user-facing-errors/: Cargo.toml
prisma-fmt/src/: code_actions.rs  references.rs
prisma-fmt/tests/: native_types.rs
psl/: README.md
psl/parser-database/: Cargo.toml
psl/psl/: Cargo.toml
psl/psl-ast/: Cargo.toml
psl/psl-ast/src/: lib.rs  (+1 more)
psl/psl-core/: Cargo.toml
psl/psl-schema/: Cargo.toml
psl/psl/src/: lib.rs
psl/psl/tests/: datamodel_tests.rs
psl/psl/tests/attributes/: constraint_names_negative.rs  constraint_names_positive.rs  default_negative.rs  default_positive.rs  id_negative.rs  id_positive.rs  index_negative.rs  index_positive.rs  map_positive.rs  mod.rs
psl/psl/tests/attributes/postgres_indices/: cockroachdb.rs
psl/psl/tests/attributes/relations/: many_to_many_negative.rs  referential_actions.rs  relations_negative.rs  relations_positive.rs
psl/psl/tests/attributes/relations/referential_actions/: cycle_detection.rs
psl/psl/tests/base/: base_types.rs  basic.rs  comments.rs  duplicates.rs
psl/psl/tests/capabilities/: mysql.rs  postgres.rs  sqlite.rs
psl/psl/tests/common/: asserts.rs  mod.rs
psl/psl/tests/config/: sources.rs
psl/psl/tests/parsing/: literals.rs
psl/psl/tests/reformat/: reformat.rs  reformat_implicit_relations.rs
psl/psl/tests/reformatter/: block_attribute_comments_are_canonised.prisma  block_attribute_comments_are_canonised.reformatted.prisma
psl/psl/tests/types/: mod.rs  negative.rs
psl/psl/tests/validation/attributes/schema/: tables_in_same_schema_with_same_mapped_name.prisma
psl/psl/tests/validation/attributes/shard_key/: unsupported_provider.prisma
psl/schema-context/: Cargo.toml
psl/schema-context/src/: context.rs  file.rs  lib.rs
quaint/: .envrc  Cargo.toml  README.md  build.rs  docker-compose.yml  shell.nix
quaint/src/: connector.rs  lib.rs  pooled.rs  prelude.rs  single.rs  visitor.rs
query-compiler/query-compiler/: Cargo.toml
query-compiler/query-compiler/src/: data_mapper.rs  lib.rs
query-engine/query-engine/: Cargo.toml
query-engine/request-handlers/: Cargo.toml
schema-engine/commands/: Cargo.toml
schema-engine/core/: Cargo.toml
schema-engine/json-rpc-api/: Cargo.toml
schema-engine/sql-introspection-tests/: Cargo.toml
schema-engine/sql-migration-tests/: Cargo.toml
schema-engine/sql-schema-describer/: Cargo.toml
script/: test.sh
(+511 files in other folders)
