[package]
name = "prisma"
version = "0.0.0"
edition = "2024"

[dependencies]
schema-context.workspace = true


thiserror = "1.0.37"
anyhow = "1.0.65"

clap = { version = "4.0.9", features = ["cargo", "derive"] }
clap-verbosity-flag = "2.0.1"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.107"

cmd_lib = "1.3.0"
fork = "0.1.22"

tracing = "0.1.37"
tracing-subscriber = "0.3.17"
