[package]
name = "driver-adapters"
version = "0.1.0"
edition.workspace = true

[features]
mysql = ["quaint/mysql"]
sqlite = ["quaint/sqlite"]
postgresql = ["quaint/postgresql"]

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
futures.workspace = true
panic-utils.workspace = true
prisma-metrics.workspace = true
serde.workspace = true
serde_json.workspace = true
telemetry.workspace = true
tracing.workspace = true
tracing-core.workspace = true
uuid.workspace = true
pin-project.workspace = true
serde_repr.workspace = true
napi.workspace = true
napi-derive.workspace = true
quaint.workspace = true

[dev-dependencies]
expect-test.workspace = true
tokio = { workspace = true, features = ["macros", "time", "sync"] }


