[package]
name = "query-engine-common"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
url.workspace = true
query-connector.workspace = true
query-core.workspace = true
telemetry.workspace = true
user-facing-errors.workspace = true
serde_json.workspace = true
serde.workspace = true
connection-string.workspace = true
psl.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-futures.workspace = true
prisma-metrics.workspace = true
napi.workspace = true
