[package]
edition = "2024"
name = "query-compiler"
version = "0.1.0"

[dependencies]
psl.workspace = true
query-structure.workspace = true
query-builder.workspace = true
query-core.workspace = true
serde_json.workspace = true
sql-query-builder = { workspace = true, features = ["relation_joins"]}
quaint.workspace = true

thiserror.workspace = true
serde.workspace = true
itertools.workspace = true
bon.workspace = true
pretty = { workspace = true, features = ["termcolor"] }
indexmap = { workspace = true, features = ["serde"] }

[dev-dependencies]
insta = { workspace = true, features = ["glob"] }
request-handlers.workspace = true
# pull all connectors for testing
psl = { workspace = true, features = ["sqlite", "mysql", "postgresql"] }
quaint = { workspace = true, features = ["sqlite", "mysql", "postgresql"] }

[features]
default = ["all"]
sqlite = ["quaint/sqlite"]
postgresql = ["quaint/postgresql"]
mysql = ["quaint/mysql"]
all = ["sqlite", "postgresql", "mysql"]
